--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <img src="/assets/img/asset_logo.png" alt="SCoRe" style="width: 52px;"/>
+        <img src="/ASSET/assets/img/asset_logo.png" alt="SCoRe" style="width: 52px;"/>
       <!--<a class="navbar-brand" href="{{ "/"  | prepend: site.baseurl }}">{{ site.title }}</a>-->
     </div>
     <div class="navbar-collapse collapse navbar-right">
