--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
             {% for post in site.categories['blog'] limit:4 %} 
                 <li>
                     <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ '/assets/img/blog/thumbs/' | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
-                    <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+                    <p><a href="{{ post.url  | prepend: site.baseurl }}">{{ post.title }}</a></p>
                 <em>Posted on {{ post.date | date_to_string }}</em>
             </li>
             {% endfor %} 
