Updated the donation page

--- a/_includes/donation.html
+++ b/_includes/donation.html
@@ -6,10 +6,10 @@
             <div>
               <section>
                   <form>
-                      First name:
-                      <input type="text" name="firstname" value="Anonymous"><br>
-                      Last name:&nbsp;
-                      <input type="number" name="lastname" value="0"><br><br>
+                      Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <input type="text" name="name" value="Anonymous"><br>
+                      Amount:&nbsp;
+                      <input type="number" name="amount" value="0"><br><br>
                       <input type="submit" value="Donate">
                   </form> 
               </section>
