publication links open in new tab

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -83,7 +83,7 @@
                             {% for publications in site.categories['publications']%}
                             <section>
                                 <li>
-                                    <h4><a href="{{publications.link}}">{{publications.title}}</a></h4>
+                                    <h4><a target="_blank" href="{{publications.link}}">{{publications.title}}</a></h4>
                                     {{publications.authors}}<br/>
                                     <i>{{publications.conference}} - {{publications.year}}</i>
                                 </li>
@@ -119,7 +119,7 @@
                         <p>
                             <b>When and where?</b>
                         </p>
-                        <ul style="padding-left: 25px;" type="circle"> 
+                        <ul style="padding-left: 25px;" type="circle">
                             <li>Date: Every Friday</li>
                             <li>Time: 11.00am</li>
                             <li>Venue: SCoRe lab / 4th floor conference room</li>
@@ -134,7 +134,7 @@
             </div>
             <section>
                 <div class="col">
-                    <p> We hope to add the details of the papers discussed and the paper presenters in this page in the future. Currently this page is under development. Please await more updates.</p> 
+                    <p> We hope to add the details of the papers discussed and the paper presenters in this page in the future. Currently this page is under development. Please await more updates.</p>
                 </div>
             </section>
         </div>
