Changed publications.html so that publications page shows up in new tab

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -83,7 +83,7 @@
                             {% for publications in site.categories['publications']%}
                             <section>
                                 <li>
-                                    <h4><a href="{{publications.link}}">{{publications.title}}</a></h4>
+                                    <h4><a href="{{publications.link}}" target="_blank">{{publications.title}}</a></h4>
                                     {{publications.authors}}<br/>
                                     <i>{{publications.conference}} - {{publications.year}}</i>
                                 </li>
