--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,43 @@
-<style> 
+<style>
     .slider {
-        width: 1024px;
         margin: 2em auto;
+        position: relative;
+        height:200px;
+    }
+
+    @media screen and (min-width: 540px) {
+        .slider {
+            height: 300px;
+        }
+    }
+    @media screen and (min-width: 768px) {
+        .slider {
+            height:500px;
+            margin-top:100px;
+        }
+    }
+    @media screen and (min-width: 992px) {
+        .slider {
+            margin-top: 0;
+        }
     }
 
     .slider-wrapper {
-        width: 100%;
-        height: 400px;
-        position: relative;
+        display: flex;
+        justify-content: center;
     }
-    
+
     .slide {
-        float: left;
-        position: absolute;
-        width: 100%;
-        height: 100%;
         opacity: 0;
         transition: opacity 3s linear;
+        position: absolute;
+        height: 100%;
     }
-    
+
     .slider-wrapper > .slide:first-child {
         opacity: 1;
     }
-    
+
     #headerwrap {
         text-align: -webkit-match-parent !important;
     }
@@ -30,12 +45,12 @@
 
 <script>
 (function() {
-	
+
 	function Slideshow( element ) {
 		this.el = document.querySelector( element );
 		this.init();
 	}
-	
+
 	Slideshow.prototype = {
 		init: function() {
 			this.wrapper = this.el.querySelector( ".slider-wrapper" );
@@ -45,14 +60,14 @@
 			this.index = 0;
 			this.total = this.slides.length;
 			this.timer = null;
-			
+
 			this.action();
-			this.stopStart();	
+			this.stopStart();
 		},
 		_slideTo: function( slide ) {
 			var currentSlide = this.slides[slide];
 			currentSlide.style.opacity = 1;
-			
+
 			for( var i = 0; i < this.slides.length; i++ ) {
 				var slide = this.slides[i];
 				if( slide !== currentSlide ) {
@@ -68,7 +83,7 @@
 					self.index = 0;
 				}
 				self._slideTo( self.index );
-				
+
 			}, 3000);
 		},
 		stopStart: function() {
@@ -76,24 +91,24 @@
 			self.el.addEventListener( "mouseover", function() {
 				clearInterval( self.timer );
 				self.timer = null;
-				
+
 			}, false);
 			self.el.addEventListener( "mouseout", function() {
 				self.action();
-				
+
 			}, false);
 		}
-		
-		
+
+
 	};
-	
+
 	document.addEventListener( "DOMContentLoaded", function() {
-		
+
 		var slider = new Slideshow( "#main-slider" );
-		
+
 	});
-	
-	
+
+
 })();
 
 </script>
@@ -109,7 +124,7 @@
                     <img src="/ASSET/assets/img/elephants_cover5.png" alt="Four" class="slide" />
                     <img src="/ASSET/assets/img/elephants_cover6.png" alt="Five" class="slide" />
                 </div>
-            </div>	
+            </div>
         </div>
-    </div> 
+    </div>
 </div>
