Responsive Donation Page

--- a/_includes/donation.html
+++ b/_includes/donation.html
@@ -1,3 +1,15 @@
+<style>
+@media only screen and (max-width: 500px) {
+  h3, section {
+  text-align: center;
+}
+.submit_btn{
+background: #384452;
+    padding: 7px;
+    width: 163px;
+	    color: #ffffff;
+}
+</style>
 <div class="container">
     <div class="row">
         <div class="col-lg-6">
@@ -10,7 +22,7 @@
                       <input type="text" name="name" value="Anonymous"><br>
                       Amount:&nbsp;
                       <input type="number" name="amount" value="0"><br><br>
-                      <input type="submit" value="Donate">
+                      <input  type="submit" class="submit_btn" value="Donate">
                   </form> 
               </section>
             </div>
