--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,6 +399,12 @@ a:focus {
   margin-left: 15px;
 }
 
+@media only screen and (max-width: 500px) {
+   #blue h3 {
+  text-align: center;
+}
+}
+
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
