Responsive Navigation bar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,22 @@
+<style> 
+
+@media only screen and (max-width: 500px) {
+   .asset_logo{
+   
+    margin-left: 35px;
+
+
+  }
+.nav, .navbar-nav {
+    text-align: center;
+}
+.navbar-header{
+padding: 8px;
+}
+}
+
+  
+</style>
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
@@ -8,7 +27,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <img src="/ASSET/assets/img/asset_logo.png" alt="SCoRe" style="width: 52px;"/>
+        <img src="/ASSET/assets/img/asset_logo.png" class="asset_logo" alt="SCoRe" style="width: 52px;"/>
       <!--<a class="navbar-brand" href="{{ "/"  | prepend: site.baseurl }}">{{ site.title }}</a>-->
     </div>
     <div class="navbar-collapse collapse navbar-right">
