--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ a:focus {
 
 @media only screen and (max-width: 500px) {
    #blue h3 {
-  text-align: center;
+  text-align: left;
 }
 }
 
@@ -513,4 +513,5 @@ a.anchor{
     top: -80px;
     visibility: hidden;
 }
+
 
